Fix too big images on the modal

--- a/nasa-fetch-api/src/components/gallery/Modal.css
+++ b/nasa-fetch-api/src/components/gallery/Modal.css
@@ -67,3 +67,9 @@
 #cancelBtn {
     background-color: crimson;
 }
+
+.starPicture{
+    max-height: 550px;
+    max-width: 1500px;
+    object-fit: contain;
+}
